# small-games

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check_flake8.yml  github-actions-linter.yml
small_games/: cli.py
small_games/scripts/: small_games.py
tests/: test_small_games.py
