[tool.poetry]
name = "small-games"
version = "0.1.0"
description = ""
authors = ["Yuriy Polishchuk <yr.polishchuk@gmail.com>"]
packages = [
    {include = "small_games" },
]

[tool.poetry.scripts]
small-games = "small_games.scripts.small_games:main"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
